Fixed problems with position: fixed on navigation bar having different formatting on mobile device than desktop view.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: Montserrat, sans-serif;
   color: #575757;
   line-height: 1.6;
-  position: relative;
+  position: absolute;
 }
 
 header {
